added fwstETH contract details
added the missing wstETH lending vault contract details

Network | Address | Explorer | Constructor Args | Salt
of fwstETH

--- a/deployments/v1_0_0.md
+++ b/deployments/v1_0_0.md
@@ -162,6 +162,12 @@
 |---|---|---|---|---|
 | mainnet | 0x580f8C04080347F5675CF67C1E90d935463148dC | [Link](https://etherscan.io/address/0x580f8C04080347F5675CF67C1E90d935463148dC#code) | "0x264786EF916af64a1DB19F513F24a3681734ce92", "0x52Aa899454998Be5b000Ad077a46Bbe360F4e497", "0x90551c1795392094FE6D29B758EcCD233cFAa260", "0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE", "0x0000000000000000000000000000000000000000", {"tvlCheckPoint1":{"type":"BigNumber","hex":"0x017eb92e928451d00000"},"expandPercentUntilCheckPoint1":2500,"tvlCheckPoint2":{"type":"BigNumber","hex":"0x023ea08cfecb04a00000"},"expandPercentUntilCheckPoint2":2000,"tvlCheckPoint3":{"type":"BigNumber","hex":"0x02fd725d2508a3a00000"},"expandPercentUntilCheckPoint3":1500,"expandPercentAboveCheckPoint3":1000}, {"tvlCheckPoint1":0,"expandPercentUntilCheckPoint1":0,"tvlCheckPoint2":0,"expandPercentUntilCheckPoint2":0,"tvlCheckPoint3":0,"expandPercentUntilCheckPoint3":0,"expandPercentAboveCheckPoint3":0} | 0x0003 |
 
+### fToken_fwstETH 
+
+| Network | Address | Explorer | Constructor Args | Salt |
+|---|---|---|---|---|
+| mainnet | 0x2411802D8BEA09be0aF8fD8D08314a63e706b29C | [Link](https://etherscan.io/address/0x2411802D8BEA09be0aF8fD8D08314a63e706b29C#code) | "0x52Aa899454998Be5b000Ad077a46Bbe360F4e497", "0x54B91A0D94cb471F37f949c60F7Fa7935b551D03", "0x7f39C581F595B53c5cb19bD0b3f8dA6c935E2Ca0" | 0x0003 |
+
 ### UniV3CheckCLRSOracle_ETH_USDC 
 
 | Network | Address | Explorer | Constructor Args | Salt |
