added the Vault_weETH_wstETH_MaxBorrowHandler details
Network | Address | Explorer | Constructor Args | Salt
for weETH/wstETH MaxBorrowHandler

--- a/deployments/v1_0_0.md
+++ b/deployments/v1_0_0.md
@@ -324,6 +324,12 @@
 |---|---|---|---|---|
 | mainnet | 0x40D9b8417E6E1DcD358f04E3328bCEd061018A82 | [Link](https://etherscan.io/address/0x40D9b8417E6E1DcD358f04E3328bCEd061018A82#code) | {"liquidity":"0x52Aa899454998Be5b000Ad077a46Bbe360F4e497","factory":"0x324c5Dc1fC42c7a4D43d92df1eBA58a54d13Bf2d","adminImplementation":"0x8730d7a5aF435678b2686289eEB6A74A042081e6","secondaryImplementation":"0x836580Dc0B1FF9351c58c173CD1dA8b31A536733","supplyToken":"0xcd5fe23c85820f7b72d0926fc9b05b43e359b7ee","borrowToken":"0x7f39C581F595B53c5cb19bD0b3f8dA6c935E2Ca0","supplyDecimals":18,"borrowDecimals":18,"vaultId":6,"liquidityTotalSupplySlot":"0x4fd0bc2c686ba4378c79aedfc3a5b8082c3d0a08bc881aa72df655d3853a251b","liquidityTotalBorrowSlot":"0x94416004645a626907820dc10a83f0e7e82fe5572b44e84e877643ce205ff0ed","liquiditySupplyExchangePriceSlot":"0xd4cf6f2f51dbaea40476315a1484b80d6fd1a75ae966e074cc2e1bbb21e1cd19","liquidityBorrowExchangePriceSlot":"0xc24eaceff5753c99066a839532d708a8661af7a9b01d44d0cd915c53969eb725","liquidityUserSupplySlot":"0xfbdcb32332255ebd25986fc05128c5c5c22eb6e1604ad58420f1a51726065054","liquidityUserBorrowSlot":"0xb01fd7804c728481e0e32ec956a7587a7078c3f2174b7e787db6258d58d99980"} | 0x0003 |
 
+### Vault_weETH_wstETH_MaxBorrowHandler 
+
+| Network | Address | Explorer | Constructor Args | Salt |
+|---|---|---|---|---|
+| mainnet | 0x383683D4414Fc27CC9669b7Cc6c7067716814b6a | [Link](https://etherscan.io/address/0x383683D4414Fc27CC9669b7Cc6c7067716814b6a#code) | "0x264786EF916af64a1DB19F513F24a3681734ce92", "0x52Aa899454998Be5b000Ad077a46Bbe360F4e497", "0x741c2Cd25f053a55fd94afF1afAEf146523E1249", "0x40D9b8417E6E1DcD358f04E3328bCEd061018A82", "0x7f39C581F595B53c5cb19bD0b3f8dA6c935E2Ca0", 8500, 100 | 0x0003 |
+
 ### FluidWalletFactoryProxy 
 
 | Network | Address | Explorer | Constructor Args | Salt |
